Update docs + package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "trydionel.whos-watching",
   "description": "Who's watching",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": "trydionel",
   "repository": {
     "type": "git",
-    "url": "TODO: Add the GitHub URL to your extension in package.json"
+    "url": "https://github.com/trydionel/whos-watching-extension"
   },
   "license": "MIT",
   "devDependencies": {
